# instagram_scrap

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  package.json  pyproject.toml  server.py  session_tool.py  vercel.json
app/: __init__.py
app/core/: config.py
app/routes/v1/: routes.py
app/routes/v1/reels/: reels.py
app/routes/v1/session/: session.py
app/routes/v1/user/: follow.py  user.py
app/server/: browser_manager.py
scratch/: verify_picpac23.py
tests/: test_main.py  verify_final.py
