[project]
name = "instagram-scrap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.121.1",
    "playwright-stealth>=2.0.0",
    "psutil>=7.1.3",
    "pydantic-settings>=2.12.0",
    "pydantic>=2.12.4",
    "playwright>=1.40.0",
    "python-dotenv>=1.0.0",
    "undetected-playwright>=0.3.0",
]

[tool.uv.workspace]

