[project]
name = "instagram-scrap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.121.1",
    "pydantic-settings>=2.12.0",
    "pydantic>=2.12.4",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "slowapi>=0.1.9",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
]

[tool.uv.workspace]
